Changelog
=========

1.1.9 - unreleased
------------------


1.1.8 - 2009-03-07
------------------

- Adjust the caching of sitemap.xml.gz. We only cache for anonymous users. That
  fixes a bug where a cached sitemap.xml.gz is delivered with information that
  only an user with more privilegs is allowed to see. We also make sure that
  the cached file was build with a current catalog by adding the catalog
  counter to the cache key. Based on a patch by stxnext. Fixes
  http://dev.plone.org/plone/ticket/8402.
  [stxnext, csenger]

- Added time_only for use with toLocalizedTime so that event_view now localizes
  the start/end times if the start/end dates are the same. Closes
  http://dev.plone.org/plone/ticket/8607.
  [jnelson, calvinhp]

- Fixed Plone 3.1 backward compatibility of above.
  [stefan]


1.1.7 - December 15, 2008
-------------------------

- Modified user profile item on the dashboard to use an image tag
  instead of a background image. This makes it more consistent with
  the other list items and easier to style for RTL scripts.
  [emanlove]


1.1.6 Released November 21st, 2008
----------------------------------

- Avoid a test failure caused by test interdependencies.
  [hannosch]

- Fixed tests for the language method of the portal state view.
  [hannosch]

- Fixed keywords.pt to properly encode ampersands in its links. This closes
  http://dev.plone.org/plone/ticket/8509
  [younga3, dunlapm]

- Fixed site_icon so that we would have flipped icon in case of RTL.
  This closes http://dev.plone.org/plone/ticket/4576
  [spliter]

- Fixed generation of links to author.cpt for user IDs that are a URL
  (OpenID users, e.g.).  This closes http://dev.plone.org/plone/ticket/8040
  [davisagli]

- Add some tests on private contents for sitemap.xml.gz generation.  This
  closes http://dev.plone.org/plone/ticket/8402
  [encolpe]

1.1.5 Released August 18th, 2008
--------------------------------

- Fixed an invalid message id for the dashboard. This closes